--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@awesome-cordova-plugins/chooser": "^6.4.0",
+    "@capacitor/android": "^5.2.2",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.0",
     "@capacitor/core": "5.2.2",
     "@capacitor/filesystem": "^5.0.0",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "jetifier": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
