--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/ios": "^5.2.2",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capawesome/capacitor-file-picker": "^5.1.0",
     "@ionic/angular": "^7.0.0",
     "cordova-ios": "6.3.0",
     "cordova-plugin-chooser": "^1.3.2",
